[package]
name = "hello-tf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# tensorflow = "0.19.1"
# tokio = {version = "1.12.0", features = ["full"]}
# tonic = "0.8.3"
# prost = "0.11.6"
# async-trait = "0.1"

# axum = {git = "https://github.com/tokio-rs/axum", features=["multipart"]}
# tracing = "0.1"
# tracing-subscriber = "0.3"

# serde = {version="1.0", features=["derive"]}
# serde_json = "1.0"

# tower-http = {version="0.3.5", features=["full"]}

# [build-dependencies]
# tonic-build = "0.8"

[dependencies]
async-trait = "0.1.89"
prost = "0.14.1"
tensorflow = "0.21.0"
tokio = { version = "1.12", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"]}
tonic = "0.14.2"

axum = { version = "0.8.4", features=["multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3.20"
tower-http = { version = "0.6.6", features = ["full" ] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tonic-web = "0.14"
http = "1.3.1"
http-body = "1.0.1"
hyper = {version = "1.7", features = ["full"]}
reqwest = "0.12.23"
futures = "0.3.31"
tower = "0.5.2"
bytes = "1.1.0"
warp = "0.4.2"

[build-dependencies]
tonic-build = "0.8"